kubernetes-manifests/bubble-app/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-rollout
  labels:
    app: istio-rollout
spec:
  strategy:
    # which strategy to use (blueGreen, canary..)
    canary:
    # this part represents all the steps during an update.
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 2
        args:
        - name: service-name
          value: istio-rollout-canary.default.svc.cluster.local
      steps:
    # we send at the beginning of the new release 20% of the traffic to the canary release.
    # To do that, Argo CD will update the weight of Istio's VirtualService.
      - setWeight: 20
    # Then we wait 1min to generate some traffic on the canary release.
      - pause:
          duration: "1m"
    # After 1 min, we send 50% of the traffic to the canary release.
      - setWeight: 50
    # Then we wait again 2min
      - pause:
          duration: "2m"
    # At the end if no more step is present, 
    # Argo will send 100% of the traffic to the canary release.
      canaryService: istio-rollout-canary # represents our canary clusterIP service.
      stableService: istio-rollout-stable # represents our main clusterIP service.
      trafficRouting:
        istio:
           virtualService: 
            name: istio-rollout-vs
            routes:
            - istio-rollout-rt # At least one route is required
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: istio-rollout
      version: blue
  template:
    metadata:
      labels:
        app: istio-rollout
        version: blue
    spec:
      containers:
      - name: istio-rollout
        image: argoproj/rollouts-demo:orange # blue (stable) / orange (new canary version) / bad-green  (broken image)
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "140m"
