kubernetes-manifests/bubble-app/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-canary
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: istio-rollout
  type: ClusterIP
  
---
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-stable
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: istio-rollout
  type: ClusterIP
